--- a/src/components/step.css
+++ b/src/components/step.css
@@ -1,15 +1,29 @@
 .step {
-    background-color: white;
+    background-color: rgb(68, 76, 111);
+    box-shadow: -3px -3px 3px rgba(134, 134, 134, 0.7),
+              -3px -3px 3px rgba(255, 255, 255, .5),
+              4px 4px 3px #383737,
+              4px 4px 3px rgba(0, 0, 0, .15);
+    cursor: pointer;
+    vertical-align: middle;
+
 }
 
 .step_clicked {
-    background-color: #A240DE;
+    box-shadow: -2px -2px 6px rgb(90, 227, 248),
+              -2px -2px 4px rgb(90, 227, 248),
+              2px 2px 2px rgb(90, 227, 248),
+              2px 2px 4px rgb(90, 227, 248);
+    
 }
 
 .step_hovered:hover {
-    background-color: yellow;
+    box-shadow: -2px -2px 6px rgba(255, 255, 255, .6),
+              -2px -2px 4px rgba(255, 255, 255, 0.811),
+              2px 2px 2px rgba(236, 235, 235, 0.692),
+              2px 2px 4px rgba(255, 255, 255, 0.1);
 }
 
 .step_played{
-    background-color: red;
+    background-color: rgb(132, 186, 204);
 }
