--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    background-color: #181616;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&family=MuseoModerno:wght@100;200;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Limelight&family=MuseoModerno:ital,wght@0,100..900;1,100..900&display=swap')
