--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,3 +1,17 @@
+#backgroundCanvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+  
+  #home {
+    position: relative;
+    overflow: hidden;
+  }
+
 .popout1 {
     position: relative;
     overflow: hidden;
