--- a/src/components/step.css
+++ b/src/components/step.css
@@ -7,10 +7,10 @@
 }
 
 .step_clicked {
-    box-shadow: -2px -2px 6px #FF69B4,
-              -2px -2px 4px #FF69B4,
-              2px 2px 2px #FF69B4,
-              2px 2px 4px #FF69B4;
+    box-shadow: -2px -2px 6px rgba(255, 255, 255, .6),
+              -2px -2px 4px rgba(255, 255, 255, 0.811),
+              2px 2px 2px rgba(236, 235, 235, 0.692),
+              2px 2px 4px rgba(255, 255, 255, 0.1);
     animation: rotateAnimation 3s linear infinite;
 }
 
@@ -54,7 +54,7 @@
     transform: scale(1);
 }
 50% {
-    transform: scale(1.25);
+    transform: scale(1.2);
 }
 100% {
     transform: scale(1);
