--- a/src/components/step.css
+++ b/src/components/step.css
@@ -69,4 +69,11 @@
         width: 3vw; 
         height: 3vw;
     }
+    .step_clicked {
+        box-shadow: -2px -2px 6px rgba(223, 64, 231, 0.81),
+                  -2px -2px 4px rgba(218, 53, 207, 0.811),
+                  2px 2px 2px rgba(176, 36, 200, 0.692),
+                  2px 2px 4px rgba(224, 29, 204, 0.62);
+        animation: rotateAnimation 3s linear infinite;
+    }
 }
